--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "dependencies": {
     "express": "3.x",
-    "supertest": "*"
+    "supertest": "*",
+    "sequelize": "*",
+    "mysql": "*"
   },
   "scripts": {
     "start" : "app.js"
