--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "supertest": "*",
     "sequelize": "*",
     "mysql": "*",
-    "nodemailer": "~0.6.5"
+    "nodemailer": "~0.6.5",
+    "handlebars": "~2.0.0-alpha.4"
   },
   "scripts": {
     "start": "app.js"
